# REPO

./: .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  LAB_DOCUMENTATION.md  README.md  RELEASE.md  publish.sh  pyproject.toml  requirements.txt  run_tests.sh  starter_linux_security_check.sh  starter_log_analyzer.py  starter_password_checker.py
.github/workflows/: ci.yml
archive/: 2026-02-05_11-28_starter_linux_security_check.sh  2026-02-05_11-28_starter_log_analyzer.py  2026-02-05_11-28_starter_password_checker.py
tests/: test_log_analyzer.py  test_password_checker.py
